can_jr presque fini

--- a/cleaning_data/cleaning_awards.ipynb
+++ b/cleaning_data/cleaning_awards.ipynb
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "id": "2dfa092d-4fdb-4ec6-9103-cae072ef2565",
    "metadata": {},
    "outputs": [],
@@ -810,19 +810,17 @@
     "h = can_gp_cl.columns\n",
     "#renommer les colonnes qui ont été mal scrappées\n",
     "can_gp_cl.rename(columns={h[0]: 'Year', h[1] : 'English_title' , h[2]:'Original_title', h[3]:'Director', h[4]:'Production_country' }, inplace=True)\n",
-    "#suppression lignes non voulues\n",
+    "\n",
+    "\n",
+    "#suppression lignes non voulues avec la décennie comme valeur dans chaque colonne (scrapping du tableau difficile)\n",
     "decades_to_delete = [f\"{decade}s\" for decade in range(1960, 2030, 10)]\n",
     "can_gp_cl = can_gp_cl.loc[~can_gp_cl['English_title'].isin(decades_to_delete)]\n",
-    "can_gp_cl = can_gp_cl.reset_index(drop=True)\n",
-    "#conversion en type date de la colonne year \n",
-    "\n",
-    "\n",
-    "\n"
+    "can_gp_cl = can_gp_cl.reset_index(drop=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "id": "1d0aef6e-e273-410f-96a1-11db2819bd24",
    "metadata": {},
    "outputs": [
@@ -991,32 +989,234 @@
        "[65 rows x 5 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#conversion en type date de la colonne year \n",
+    "\n",
     "can_gp_cl['Year'] = can_gp_cl['Year'].astype(str)\n",
     "can_gp_cl['Year'] = can_gp_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
     "can_gp_cl['Year'] = pd.to_datetime(can_gp_cl['Year'], format='%Y', errors='coerce')\n",
     "\n",
     "can_gp_cl= can_gp_cl.iloc[:65, :5]\n",
+    "\n",
     "can_gp_cl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "0e8493b9-8b7a-4271-82b6-91ced3670121",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "can_jr_cl = can_jr\n",
+    "h = can_jr_cl.columns\n",
+    "#renommer les colonnes qui ont été mal scrappées\n",
+    "can_jr_cl.rename(columns={h[0]: 'Year', h[1] : 'English_title' , h[2]:'Original_title', h[3]:'Director', h[4]:'Production_country' }, inplace=True)\n",
+    "\n",
+    "\n",
+    "#suppression lignes non voulues avec la décennie comme valeur dans chaque colonne (scrapping du tableau difficile)\n",
+    "decades_to_delete = [\"1950s\"] + decades_to_delete\n",
+    "can_jr_cl = can_jr_cl.loc[~can_jr_cl['English_title'].isin(decades_to_delete)]\n",
+    "\n",
+    "can_jr_cl = can_jr_cl.reset_index(drop=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "f542f66c-cf75-415e-9187-532837a10304",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>English_title</th>\n",
+       "      <th>Original_title</th>\n",
+       "      <th>Director</th>\n",
+       "      <th>Production_country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1946</td>\n",
+       "      <td>The Battle of the Rails</td>\n",
+       "      <td>La Bataille du rail</td>\n",
+       "      <td>René Clément</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Awarded as \"Special Jury Prize\"</td>\n",
+       "      <td>Awarded as \"Special Jury Prize\"</td>\n",
+       "      <td>Awarded as \"Special Jury Prize\"</td>\n",
+       "      <td>Awarded as \"Special Jury Prize\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1951</td>\n",
+       "      <td>All About Eve</td>\n",
+       "      <td>All About Eve</td>\n",
+       "      <td>Joseph L. Mankiewicz</td>\n",
+       "      <td>United States</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1952</td>\n",
+       "      <td>We Are All Murderers</td>\n",
+       "      <td>Nous sommes tous des assassins</td>\n",
+       "      <td>André Cayatte</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1954</td>\n",
+       "      <td>Knave of Hearts</td>\n",
+       "      <td>Monsieur Ripois</td>\n",
+       "      <td>René Clément</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Ahed's Knee</td>\n",
+       "      <td>הַבֶּרֶךְ</td>\n",
+       "      <td>Nadav Lapid</td>\n",
+       "      <td>France, Germany, Israel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Memoria</td>\n",
+       "      <td>Memoria</td>\n",
+       "      <td>Apichatpong Weerasethakul</td>\n",
+       "      <td>Colombia, Thailand, United Kingdom, Mexico, Fr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>The Eight Mountains</td>\n",
+       "      <td>Le otto montagne</td>\n",
+       "      <td>Felix van Groeningen &amp; Charlotte Vandermeersch</td>\n",
+       "      <td>Italy, Belgium, France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>EO</td>\n",
+       "      <td>EO</td>\n",
+       "      <td>Jerzy Skolimowski</td>\n",
+       "      <td>Poland, Italy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>Fallen Leaves</td>\n",
+       "      <td>Kuolleet lehdet</td>\n",
+       "      <td>Aki Kaurismäki</td>\n",
+       "      <td>Finland</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>84 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year                    English_title                   Original_title  \\\n",
+       "0   1946          The Battle of the Rails              La Bataille du rail   \n",
+       "1    NaN  Awarded as \"Special Jury Prize\"  Awarded as \"Special Jury Prize\"   \n",
+       "2   1951                    All About Eve                    All About Eve   \n",
+       "3   1952             We Are All Murderers   Nous sommes tous des assassins   \n",
+       "4   1954                  Knave of Hearts                  Monsieur Ripois   \n",
+       "..   ...                              ...                              ...   \n",
+       "79  2021                      Ahed's Knee                        הַבֶּרֶךְ   \n",
+       "80  2021                          Memoria                          Memoria   \n",
+       "81  2022              The Eight Mountains                 Le otto montagne   \n",
+       "82  2022                               EO                               EO   \n",
+       "83  2023                    Fallen Leaves                  Kuolleet lehdet   \n",
+       "\n",
+       "                                          Director  \\\n",
+       "0                                     René Clément   \n",
+       "1                  Awarded as \"Special Jury Prize\"   \n",
+       "2                             Joseph L. Mankiewicz   \n",
+       "3                                    André Cayatte   \n",
+       "4                                     René Clément   \n",
+       "..                                             ...   \n",
+       "79                                     Nadav Lapid   \n",
+       "80                       Apichatpong Weerasethakul   \n",
+       "81  Felix van Groeningen & Charlotte Vandermeersch   \n",
+       "82                               Jerzy Skolimowski   \n",
+       "83                                  Aki Kaurismäki   \n",
+       "\n",
+       "                                   Production_country  \n",
+       "0                                              France  \n",
+       "1                     Awarded as \"Special Jury Prize\"  \n",
+       "2                                       United States  \n",
+       "3                                              France  \n",
+       "4                                              France  \n",
+       "..                                                ...  \n",
+       "79                            France, Germany, Israel  \n",
+       "80  Colombia, Thailand, United Kingdom, Mexico, Fr...  \n",
+       "81                             Italy, Belgium, France  \n",
+       "82                                      Poland, Italy  \n",
+       "83                                            Finland  \n",
+       "\n",
+       "[84 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "can_jr_cl['Year'] = can_jr_cl['Year'].astype(str)\n",
+    "can_jr_cl['Year'] = can_jr_cl['Year'].str.extract('(\\d{4})', expand=False)\n",
+    "can_gp_cl['Year'] = pd.to_datetime(can_jr_cl['Year'], format='%Y', errors='coerce')\n",
+    "\n",
+    "can_jr_cl= can_jr_cl.iloc[:84, :5]\n",
+    "\n",
+    "can_jr_cl"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f542f66c-cf75-415e-9187-532837a10304",
+   "id": "99cec7df-83cc-48a4-b670-f914e2ad1a01",
    "metadata": {},
    "outputs": [],
    "source": []
