--- a/cleaning_data/cleaning_awards.ipynb
+++ b/cleaning_data/cleaning_awards.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 249,
    "id": "bcf48d70-8682-400b-98ce-617f59f9c2a5",
    "metadata": {},
    "outputs": [
@@ -394,36 +394,36 @@
        "      <th></th>\n",
        "      <th>Year</th>\n",
        "      <th>Director</th>\n",
-       "      <th>Film</th>\n",
+       "      <th>English_title</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>1927-01-01</td>\n",
        "      <td>Frank Borzage</td>\n",
        "      <td>7th Heaven</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>1927-01-01</td>\n",
        "      <td>Herbert Brenon</td>\n",
        "      <td>Sorrell and Son</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>1927-01-01</td>\n",
        "      <td>King Vidor</td>\n",
        "      <td>The Crowd</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>1927-01-01</td>\n",
        "      <td>Lewis Milestone</td>\n",
        "      <td>Two Arabian Knights</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>1927-01-01</td>\n",
        "      <td>Ted Wilde</td>\n",
        "      <td>Speedy</td>\n",
@@ -435,31 +435,31 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>468</th>\n",
+       "      <th>467</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>Daniel Kwan and Daniel Scheinert</td>\n",
        "      <td>Everything Everywhere All at Once</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>469</th>\n",
+       "      <th>468</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>Todd Field</td>\n",
        "      <td>Tár</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>470</th>\n",
+       "      <th>469</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>Martin McDonagh</td>\n",
        "      <td>The Banshees of Inisherin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>471</th>\n",
+       "      <th>470</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>Ruben Östlund</td>\n",
        "      <td>Triangle of Sadness</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>472</th>\n",
+       "      <th>471</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>Steven Spielberg</td>\n",
        "      <td>The Fabelmans</td>\n",
@@ -471,35 +471,35 @@
       ],
       "text/plain": [
        "          Year                          Director  \\\n",
-       "1   1927-01-01                    Frank Borzage    \n",
-       "2   1927-01-01                   Herbert Brenon    \n",
-       "3   1927-01-01                       King Vidor    \n",
-       "4   1927-01-01                  Lewis Milestone    \n",
-       "5   1927-01-01                        Ted Wilde    \n",
+       "0   1927-01-01                    Frank Borzage    \n",
+       "1   1927-01-01                   Herbert Brenon    \n",
+       "2   1927-01-01                       King Vidor    \n",
+       "3   1927-01-01                  Lewis Milestone    \n",
+       "4   1927-01-01                        Ted Wilde    \n",
        "..         ...                               ...   \n",
-       "468 2022-01-01  Daniel Kwan and Daniel Scheinert   \n",
-       "469 2022-01-01                        Todd Field   \n",
-       "470 2022-01-01                   Martin McDonagh   \n",
-       "471 2022-01-01                     Ruben Östlund   \n",
-       "472 2022-01-01                  Steven Spielberg   \n",
+       "467 2022-01-01  Daniel Kwan and Daniel Scheinert   \n",
+       "468 2022-01-01                        Todd Field   \n",
+       "469 2022-01-01                   Martin McDonagh   \n",
+       "470 2022-01-01                     Ruben Östlund   \n",
+       "471 2022-01-01                  Steven Spielberg   \n",
        "\n",
-       "                                  Film  \n",
-       "1                           7th Heaven  \n",
-       "2                      Sorrell and Son  \n",
-       "3                            The Crowd  \n",
-       "4                  Two Arabian Knights  \n",
-       "5                               Speedy  \n",
+       "                         English_title  \n",
+       "0                           7th Heaven  \n",
+       "1                      Sorrell and Son  \n",
+       "2                            The Crowd  \n",
+       "3                  Two Arabian Knights  \n",
+       "4                               Speedy  \n",
        "..                                 ...  \n",
-       "468  Everything Everywhere All at Once  \n",
-       "469                                Tár  \n",
-       "470          The Banshees of Inisherin  \n",
-       "471                Triangle of Sadness  \n",
-       "472                      The Fabelmans  \n",
+       "467  Everything Everywhere All at Once  \n",
+       "468                                Tár  \n",
+       "469          The Banshees of Inisherin  \n",
+       "470                Triangle of Sadness  \n",
+       "471                      The Fabelmans  \n",
        "\n",
        "[472 rows x 3 columns]"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,12 +512,15 @@
     "#conversion de l'année en type date \n",
     "ac_bd_cl = conv_date(ac_bd_cl)\n",
     "#renommer la colonne director\n",
-    "ac_bd_cl.rename(columns={'Director(s)': 'Director'}, inplace=True)\n",
+    "ac_bd_cl.rename(columns={'Film':'English_title','Director(s)': 'Director'}, inplace=True)\n",
     "#suppression des lignes inutiles (celles qui ne contiennent que l'année sans film\n",
-    "ac_bd_cl = ac_bd_cl.dropna(subset=['Director', 'Film'], how='all')\n",
+    "ac_bd_cl = ac_bd_cl.dropna(subset=['Director', 'English_title'], how='all')\n",
     "\n",
     "#supprimer le nom de studio dans la colonne Director\n",
     "ac_bd_cl['Director'] = ac_bd_cl['Director'].str.split('(', n=1).str[0]\n",
+    "\n",
+    "#reset index \n",
+    "ac_bd_cl = ac_bd_cl.reset_index(drop=True)\n",
     "\n",
     "ac_bd_cl\n",
     "\n"
@@ -525,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 250,
    "id": "be6fe544-6e3f-4ef1-adf0-7d42b58c63af",
    "metadata": {},
    "outputs": [
@@ -533,19 +536,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4667/1999518354.py:12: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_4667/2902350124.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  ac_bf_cl['Film_producers'] = ac_bf_cl['Film Studio'].str.extract(r'\\(([^)]+)\\)')\n",
-      "/tmp/ipykernel_4667/1999518354.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_4667/2902350124.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  ac_bf_cl['Film_producers'] = ac_bf_cl['Film_producers'].str.split(', producer', n=1).str[0]\n",
-      "/tmp/ipykernel_4667/1999518354.py:14: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_4667/2902350124.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -575,51 +578,45 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Year</th>\n",
-       "      <th>Film</th>\n",
-       "      <th>Film Studio</th>\n",
-       "      <th>Film Studio/Producer(s)</th>\n",
+       "      <th>English_title</th>\n",
+       "      <th>Film_Studio</th>\n",
        "      <th>Film_producers</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
        "      <td>1927-01-01</td>\n",
        "      <td>Wings</td>\n",
        "      <td>Famous Players–Lasky</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Lucien Hubbard, Jesse L. Lasky, B.P. Schulberg...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1927-01-01</td>\n",
+       "      <td>7th Heaven</td>\n",
+       "      <td>Fox</td>\n",
+       "      <td>William Fox</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1927-01-01</td>\n",
-       "      <td>7th Heaven</td>\n",
-       "      <td>Fox</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>William Fox</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1927-01-01</td>\n",
        "      <td>The Racket</td>\n",
        "      <td>The Caddo Company</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Howard Hughes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>3</th>\n",
        "      <td>1928-01-01</td>\n",
        "      <td>The Broadway Melody</td>\n",
        "      <td>Metro-Goldwyn-Mayer</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Irving Thalberg &amp; Lawrence Weingarten</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>4</th>\n",
        "      <td>1928-01-01</td>\n",
        "      <td>Alibi</td>\n",
        "      <td>Feature Productions</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Roland West</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -628,84 +625,78 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>681</th>\n",
+       "      <th>583</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>The Fabelmans</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Kristie Macosko Krieger, Steven Spielberg, Ton...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>682</th>\n",
+       "      <th>584</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>Tár</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Todd Field, Alexandra Milchan, and Scott Lambert</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>683</th>\n",
+       "      <th>585</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>Top Gun: Maverick</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Tom Cruise, Christopher McQuarrie, David Ellis...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>684</th>\n",
+       "      <th>586</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>Triangle of Sadness</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Erik Hemmendorff and Philippe Bober</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>685</th>\n",
+       "      <th>587</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>Women Talking</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Dede Gardner, Jeremy Kleiner, and Frances McDo...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>591 rows × 5 columns</p>\n",
+       "<p>588 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Year                 Film            Film Studio  \\\n",
-       "1   1927-01-01                Wings  Famous Players–Lasky    \n",
-       "2   1927-01-01           7th Heaven                   Fox    \n",
-       "3   1927-01-01           The Racket     The Caddo Company    \n",
-       "5   1928-01-01  The Broadway Melody   Metro-Goldwyn-Mayer    \n",
-       "6   1928-01-01                Alibi   Feature Productions    \n",
+       "          Year        English_title            Film_Studio  \\\n",
+       "0   1927-01-01                Wings  Famous Players–Lasky    \n",
+       "1   1927-01-01           7th Heaven                   Fox    \n",
+       "2   1927-01-01           The Racket     The Caddo Company    \n",
+       "3   1928-01-01  The Broadway Melody   Metro-Goldwyn-Mayer    \n",
+       "4   1928-01-01                Alibi   Feature Productions    \n",
        "..         ...                  ...                    ...   \n",
-       "681 2022-01-01        The Fabelmans                    NaN   \n",
-       "682 2022-01-01                  Tár                    NaN   \n",
-       "683 2022-01-01    Top Gun: Maverick                    NaN   \n",
-       "684 2022-01-01  Triangle of Sadness                    NaN   \n",
-       "685 2022-01-01        Women Talking                    NaN   \n",
+       "583 2022-01-01        The Fabelmans                    NaN   \n",
+       "584 2022-01-01                  Tár                    NaN   \n",
+       "585 2022-01-01    Top Gun: Maverick                    NaN   \n",
+       "586 2022-01-01  Triangle of Sadness                    NaN   \n",
+       "587 2022-01-01        Women Talking                    NaN   \n",
        "\n",
-       "    Film Studio/Producer(s)                                     Film_producers  \n",
-       "1                       NaN  Lucien Hubbard, Jesse L. Lasky, B.P. Schulberg...  \n",
-       "2                       NaN                                        William Fox  \n",
-       "3                       NaN                                      Howard Hughes  \n",
-       "5                       NaN              Irving Thalberg & Lawrence Weingarten  \n",
-       "6                       NaN                                        Roland West  \n",
-       "..                      ...                                                ...  \n",
-       "681                     NaN  Kristie Macosko Krieger, Steven Spielberg, Ton...  \n",
-       "682                     NaN   Todd Field, Alexandra Milchan, and Scott Lambert  \n",
-       "683                     NaN  Tom Cruise, Christopher McQuarrie, David Ellis...  \n",
-       "684                     NaN                Erik Hemmendorff and Philippe Bober  \n",
-       "685                     NaN  Dede Gardner, Jeremy Kleiner, and Frances McDo...  \n",
+       "                                        Film_producers  \n",
+       "0    Lucien Hubbard, Jesse L. Lasky, B.P. Schulberg...  \n",
+       "1                                          William Fox  \n",
+       "2                                        Howard Hughes  \n",
+       "3                Irving Thalberg & Lawrence Weingarten  \n",
+       "4                                          Roland West  \n",
+       "..                                                 ...  \n",
+       "583  Kristie Macosko Krieger, Steven Spielberg, Ton...  \n",
+       "584   Todd Field, Alexandra Milchan, and Scott Lambert  \n",
+       "585  Tom Cruise, Christopher McQuarrie, David Ellis...  \n",
+       "586                Erik Hemmendorff and Philippe Bober  \n",
+       "587  Dede Gardner, Jeremy Kleiner, and Frances McDo...  \n",
        "\n",
-       "[591 rows x 5 columns]"
+       "[588 rows x 4 columns]"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,23 +721,31 @@
     "ac_bf_cl['Film_producers'] = ac_bf_cl['Film_producers'].combine_first(ac_bf_cl['Producer(s)'])\n",
     "ac_bf_cl = ac_bf_cl.drop(['Producer(s)', 'Wins', 'Nominations', 'Production Company'], axis=1)\n",
     "\n",
-    "#suppression du nom de producteur dans la colonne film studio\n",
+    "#suppression du nom de pans la colonne film studio\n",
     "ac_bf_cl['Film Studio'] = ac_bf_cl['Film Studio'].str.split('(', n=1).str[0]\n",
     "\n",
     "#Maintenant, séparons la colonne Film Studio/Producers \n",
-    "\n",
+    "ac_bf_cl['Film Studio/Producer(s)'] = ac_bf_cl['Film Studio/Producer(s)'].str.split('(', n=1).str[0]\n",
     "#D'abord récupérons les noms de studios présents (manuellement car entrées peu nombreuses) \n",
-    "studio = ['\tMetro-Goldwyn-Mayer', 'Columbia', '20th Century-Fox', '\tParamount']\n",
+    "studio = ['Metro-Goldwyn-Mayer', 'Columbia', '20th Century-Fox', '\tParamount']\n",
     "#Recréer une colonne à base des noms de studio \n",
-    "\n",
+    "ac_bf_cl['Studio'] = ac_bf_cl['Film Studio/Producer(s)'].where(ac_bf_cl['Film Studio/Producer(s)'].isin(studio))\n",
     "#La lier avec Film Studio d'origine \n",
-    "\n",
+    "ac_bf_cl['Film Studio'] = ac_bf_cl['Film Studio'].combine_first(ac_bf_cl['Studio'])\n",
     "#Supprimer les entrées dans la colonne \n",
-    "\n",
+    "ac_bf_cl = ac_bf_cl [~ac_bf_cl['Film Studio/Producer(s)'].isin(studio)]\n",
     "#Combiner avec la liste des producteurs \n",
+    "ac_bf_cl['Film_producers'] = ac_bf_cl['Film_producers'].combine_first(ac_bf_cl['Film Studio/Producer(s)'])\n",
     "\n",
+    "#renommer les colonnes \n",
+    "ac_bf_cl.rename(columns={'Film Studio': 'Film_Studio', 'Film':'English_title'}, inplace=True)\n",
+    "#supprimer la référence non nécessaire\n",
+    "ac_bf_cl['English_title'] = ac_bf_cl['English_title'].str.split('[', n=1).str[0]\n",
+    "ac_bf_cl = ac_bf_cl.drop(['Film Studio/Producer(s)', 'Studio'], axis=1)\n",
+    "ac_bf_cl = ac_bf_cl.dropna(subset=['English_title', 'Year'], how='all')\n",
     "\n",
-    "\n",
+    "#reset index \n",
+    "ac_bf_cl = ac_bf_cl.reset_index(drop=True)\n",
     "ac_bf_cl"
    ]
   },
